# dm-ticket

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  supervisord.conf
.cargo/: config.toml
.github/workflows/: docker-publish.yml  release-publish.yml
config/: config.yaml  config.yaml.example
scripts/: start.sh
src/: client.rs  config.rs  dm.rs  errors.rs  lib.rs  login.rs  main.rs  server.rs  ticket.rs
src/clients/: dm.rs  login.rs  mod.rs  notify.rs  token.rs
src/models/: mod.rs  order.rs  perform.rs  qrcode.rs  task.rs  ticket.rs  user.rs
