[package]
name = "dm-ticket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.148", features = ["derive"]}
serde_json = {version = "1.0.89", default-features = false, features = ["alloc"]}
serde_yaml = "0.9.21"
schemars = "0.8.12"
tokio = { version = "1.21.2", default-features = false, features = ["macros", "rt-multi-thread", "signal", "time"] }
reqwest = {version="0.11.12", default-features=false, features = ["json", "rustls-tls", "cookies", "multipart"]}
anyhow = {version="1.0.66"}
log={version="0.4.17"}
pretty_env_logger="0.4.0"
md5 = {version="0.7.0"}
dotenv = {version= "0.15.0"}
futures = {version="0.3.28"}
chrono = {version="0.4.24", features = ["unstable-locales"] }
async-channel={version = "1.8"}